# backend/documents/serializers.py
@@ -131,6 +131,30 @@ class DocumentaryInputsResponseSerializer(serializers.Serializer):
     positions_saved = serializers.IntegerField()
 
 
+class DocumentaryPolicyOptionSerializer(serializers.Serializer):
+    id = serializers.UUIDField()
+    label = serializers.CharField()
+    version = serializers.IntegerField()
+
+
+class DocumentaryPreparationPositionSerializer(PositionDocumentaryInputSerializer):
+    system_name = serializers.CharField()
+    manufacturing_placement_policy_id = serializers.UUIDField(allow_null=True)
+    handle_requirement_policy_id = serializers.UUIDField(allow_null=True)
+    reinforcement_cut_policy_id = serializers.UUIDField(allow_null=True)
+    placement_options = DocumentaryPolicyOptionSerializer(many=True)
+    handle_options = DocumentaryPolicyOptionSerializer(many=True)
+    reinforcement_options = DocumentaryPolicyOptionSerializer(many=True)
+
+
+class DocumentaryPreparationResponseSerializer(serializers.Serializer):
+    project_id = serializers.UUIDField()
+    revision_code = serializers.RegexField(r"^REV-[A-Z]+$")
+    payment_terms = serializers.CharField(allow_blank=True)
+    quotation_valid_until = serializers.DateField(allow_null=True)
+    positions = DocumentaryPreparationPositionSerializer(many=True)
+
+
 class FreezeRequestSerializer(StrictSerializer):
     pricing_operation_id = serializers.UUIDField()
     confirmed = serializers.BooleanField()
@@ -140,7 +164,7 @@ class FreezeResponseSerializer(serializers.Serializer):
     id = serializers.UUIDField()
     pricing_operation_id = serializers.UUIDField()
     created = serializers.BooleanField()
-    revision_code = serializers.ChoiceField(choices=["REV-A"])
+    revision_code = serializers.RegexField(r"^REV-[A-Z]+$")
     bom_hash = serializers.RegexField(r"^[0-9a-f]{64}$")
     snapshot_sha256 = serializers.RegexField(r"^[0-9a-f]{64}$")
     production_allowed = serializers.BooleanField()
